@@ -1,3 +1,3 @@
-Copyright (c) 2008-2010 Agendaless Consulting, Jens Vagelpohl and Contributors.
+Copyright (c) 2008-2011 Agendaless Consulting, Jens Vagelpohl and Contributors.
 (http://www.agendaless.com, http://www.dataflake.org), All Rights Reserved
 
