@@ -17,7 +17,7 @@ Simply run this script in a directory containing a buildout.cfg.
 The script accepts buildout command-line options, so you can
 use the -c option to specify an alternate configuration file.
 
-$Id: bootstrap.py 1914 2010-04-12 11:37:04Z jens $
+$Id$
 """
 
 import os, shutil, sys, tempfile, urllib2
