@@ -12,7 +12,7 @@
 ##############################################################################
 """ unit tests base classes
 
-$Id: base.py 1901 2010-02-07 19:01:08Z jens $
+$Id$
 """
 
 import unittest
