@@ -12,7 +12,7 @@
 ##############################################################################
 """ test_fakeldap_modify: Tests for the FakeLDAP modify_s and modrdn_s methods
 
-$Id: test_fakeldap_modify.py 1916 2010-04-12 11:50:39Z jens $
+$Id$
 """
 
 import unittest
