@@ -27,7 +27,7 @@
   <h3>Related links</h3>
   <ul>
     <li><a class="reference external" href="http://pypi.python.org/pypi/{{ project|e }}/">Project home</a></li>
-    <li><a class="reference external" href="http://svn.dataflake.org/viewvc/{{ project|e }}/">Browse sources</a></li>
+    <li><a class="reference external" href="https://git.dataflake.org/cgit/{{ project|e }}/">Browse sources</a></li>
     <li><a class="reference external" href="https://bugs.launchpad.net/dataflake.ldapconnection">Bug tracker</a></li>
     <li><a class="reference external" href="http://www.zetwork.com/">Commercial support</a></li>
   </ul>
