@@ -34,9 +34,6 @@ setup(name='dataflake.ldapconnection',
         "License :: OSI Approved :: Zope Public License",
         "Operating System :: OS Independent",
         "Programming Language :: Python",
-        "Programming Language :: Python :: 2.4",
-        "Programming Language :: Python :: 2.5",
-        "Programming Language :: Python :: 2.6",
         "Topic :: Software Development :: Libraries :: Python Modules",
         "Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP",
         ],
@@ -49,6 +46,7 @@ setup(name='dataflake.ldapconnection',
       include_package_data=True,
       namespace_packages=['dataflake'],
       zip_safe=False,
+      setup_requires=['setuptools-git'],
       tests_require = [
               'python-ldap>=2.3.0',
               'dataflake.cache',
